# hyperyap

./: .gitattributes  .gitignore  .prettierignore  .release-trigger  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIDELINES.md  NOTICE  PRIVACY_POLICY.md  README.md  SECURITY.md  SUPPORT.md  eslint.config.js  i18next.config.ts  index.html  install.ps1  install.sh  latest.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: download-parakeet-model.ps1  download-parakeet-model.sh
.github/workflows/: build-linux-ubuntu-24.yml  build-linux.yml  build-macos-intel.yml  build-macos.yml  build-windows-nsis.yml  build-windows.yml  build.yml  ci.yaml  pages.yml  publish-winget.yml  release.yml  retrieve-macos-status.yml
docs/: API_USAGE.md  BETA_TESTING_EN.md  BETA_TESTING_FR.md
docs/infrastructure/: hyperyap-com.md
e2e-tests/: package.json  pnpm-lock.yaml  wdio.conf.js
hotkeys/: Cargo.toml  build.rs  icon.rc
hotkeys/src/: main.rs
hyperyap-wiki/: .gitignore  CODEX.md
presets/: llm_connect.json  settings.json
site/: CNAME  index.html  styles.css
src/: router.tsx  tailwind.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  hooks.nsh  tauri.conf.json
website/: api.html  index.html  llms.txt  privacy.html  robots.txt  security.html  sitemap.xml  styles.css
(+344 files in other folders)
