[package]
name = "hyperyap-hotkeys"
version = "1.0.0"
edition = "2021"
description = "HyperYap hotkey daemon - keyboard/mouse remapping and smart paste"

[[bin]]
name = "hyperyap-hotkeys"
path = "src/main.rs"

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
]

[build-dependencies]
embed-resource = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
